fix hover overlay on avator

--- a/client/partials/Header.html
+++ b/client/partials/Header.html
@@ -28,7 +28,7 @@
               <li>
                 <a class="dropdown-button" href="" data-activates="user-dropdown">
                   {{#if pictureExist}}
-                  <ul>
+                  <ul class="avator">
                     <li><img class="responsive-img" src="{{userProfile.picture}}"/></li>
                     <li>{{userProfile.name}}</li>
                   </ul>
