--- a/client/styles/style.scss
+++ b/client/styles/style.scss
@@ -22,6 +22,9 @@ header {
     line-height: 50px;
     vertical-align: middle;
   }
+  .avator li:hover {
+    background-color: inherit;
+  }
 }
 
 main {
