remove unnecessary links

--- a/client/components/AdminWaitingList/AdminWaitingList.html
+++ b/client/components/AdminWaitingList/AdminWaitingList.html
@@ -9,9 +9,9 @@
             </a>
             <a class="btn-floating btn-large waves-effect waves-light red toggleForm"><i class="material-icons left">add</i></a>
             <i class="material-icons">supervisor_account</i>
-            <a class="btn-floating btn-large waves-effect waves-light red"><span style="font-size:18px;">{{ waitingCustomerNum }}</span></a>
+            <span style="font-size:18px;">{{ waitingCustomerNum }}</span>
             <i class="material-icons">av_timer</i>
-            <a class="btn-floating btn-large waves-effect waves-light red"><span style="font-size:18px;">{{ WaitingTime }}</span></a>
+            <span style="font-size:18px;">{{ WaitingTime }}</span>
           </div>
           <div class="card grey lighten-5 hoverable customerForm" style="clear:both;display:none;">
             <div class="card-content black-text">
