--- a/client/components/WaitingList/WaitingList.html
+++ b/client/components/WaitingList/WaitingList.html
@@ -4,9 +4,9 @@
       <div  style="margin-top:30px;">
         <div class="restaurant-status" style="float:right;vertical-align:bottom;">
           <i class="material-icons">supervisor_account</i>
-          <a class="btn-floating btn-large waves-effect waves-light red"><span style="font-size:18px;">{{ waitingCustomerNum }}</span></a>
+          <span style="font-size:18px;">{{ waitingCustomerNum }}</span>
           <i class="material-icons">av_timer</i>
-          <a class="btn-floating btn-large waves-effect waves-light red"><span style="font-size:18px;">{{ WaitingTime }}</span></a>
+          <span style="font-size:18px;">{{ WaitingTime }}</span>
         </div>
         <h2 style="float:left;">Sign up for Waiting List!</h2>
       </div>
