change poeple to groups min to mins

--- a/client/components/AdminRestaurant/AdminRestaurant.html
+++ b/client/components/AdminRestaurant/AdminRestaurant.html
@@ -17,8 +17,8 @@
             <th class="restaurantTb"><h3>{{WaitingTime}}</h3></th>
           </tr>
           <tr>
-            <td class="restaurantTb">people are waiting</td>
-            <td class="restaurantTb">min.</td>
+            <td class="restaurantTb">groups are waiting</td>
+            <td class="restaurantTb">mins.</td>
           </tr>
         </table>
       </div>
